// Copyright 2018 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";
package encoders.proto.tests;

option java_package = "com.google.firebase.encoders.proto.tests";
option java_multiple_files = true;

message SimpleProto {
  int32 i32 = 1;
  int64 i64 = 2;
  float float = 3;
  double double = 4;

  uint32 ui32 = 5;
  uint64 ui64 = 6;

  sint32 si32 = 7;
  sint64 si64 = 8;
}

message FixedProto {
  fixed32 f32 = 1;
  sfixed32 sf32 = 2;

  fixed64 f64 = 3;
  sfixed64 sf64 = 4;
}

message OtherTypesProto {
  string str = 1;
  bytes bts = 2;
  bool bl = 3;
}

message WithCollectionsProto {
  string value = 1;
  map<string, FixedProto> my_map = 2;

  repeated OtherTypesProto other_types = 3;
}